Title alignment, subtitle, and small image fixes

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,6 +8,10 @@
     src: url("../fonts/CourierNew-Regular.ttf") format("truetype");
 }
 
+:root {
+    --column-width: 500px;
+}
+
 * {
     font-family: 'courier new', 'courier', monospace;
     font-size: 13px;
@@ -46,7 +50,7 @@ div.column {
 
 div.center, div.column {
     width: 90%;
-    max-width: 500px;
+    max-width: var(--column-width);
 }
 
 img {
@@ -85,6 +89,10 @@ code {
 #header {
     padding: 0;
     margin: 0;
+}
+
+#header td {
+    vertical-align: top;
 }
 
 #header a {
@@ -133,9 +141,14 @@ code {
     margin-left: auto;
     margin-right: auto;
     margin: 10px 0;
-    max-width: 500px;
-    width: 100%;
+    max-width: 100%;
     border: 1px var(--foreground) solid;
+}
+
+@media (min-width: var(--column-width)) {
+    #content img {
+        max-width: var(--column-width);
+    }
 }
 
 #moment {
